--- a/charts/clair/values.yaml
+++ b/charts/clair/values.yaml
@@ -1,6 +1,3 @@
-# Default values for clair.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
 replicaCount: 1
 logLevel: debug
 insecureTls: false
@@ -15,20 +12,6 @@ service:
   externalApiPort: 6060
   internalHealthPort: 6061
   externalHealthPort: 6061
-ingress:
-  enabled: false
-  # ingressClassName: ""
-  # Used to create Ingress record (should used with service.type: ClusterIP).
-  hosts:
-    - clair-clair
-  annotations:
-    # kubernetes.io/ingress.global-static-ip-name: "test-ip"
-    # kubernetes.io/tls-acme: "true"
-  tls:
-    # Secrets must be manually created in the namespace.
-    # - secretName: chart-example-tls
-    #   hosts:
-    #     - chart-example.local
 resources:
   limits:
     cpu: 2
@@ -37,10 +20,8 @@ resources:
     cpu: 50m
     memory: 2000Mi
 config:
-  # postgresURI: "postgres://user:password@host:5432/postgres?sslmode=disable"
-  # paginationKey: "XxoPtCUzrUv4JV5dS+yQ+MdW7yLEJnRMwigVY/bpgtQ="
+  postgresURI: "postgres://user:password@host:5432/postgres"
   updateInterval: 2h
-  # notificationWebhookEndpoint: https://example.com/notify/me
   enabledUpdaters:
   - debian
   - ubuntu
@@ -57,8 +38,6 @@ config:
   - apk
   - dpkg
   - rpm
-# Configuration values for the postgresql dependency.
-# ref: https://github.com/kubernetes/charts/blob/master/stable/postgresql/README.md
 postgresql:
 # The dependant Postgres chart can be disabled, to connect to
 # an existing database by defining config.postgresURI
